test/seq/cmdlists/invalid_ttl1_space.err
SyntaxError: Expecting space after TTL value
Line: 3, Column: 9
ttl(2)=1-
        ^
